# iiifmagestar

./: .gitignore  LICENSE  README.md  pyproject.toml
iiifmagestar/: cli.py  imageserver.py  main.py
iiifmagestar/templates/: home.html
