[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iiifmagestar"
version = "0.1.0"
description = "A simple IIIF 3.0 compliant image server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Giacomo Marchioro", email = "giacomomarchioro@outlook.com"}
]
keywords = ["iiif", "image", "server", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.23.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.scripts]
iiifmagestar = "iiifmagestar.cli:main"

[project.urls]
Homepage = "https://github.com/giacomomarchioro/iiifmagestar"
Documentation = "https://github.com/giacomomarchioro/iiifmagestar#readme"
Repository = "https://github.com/giacomomarchioro/iiifmagestar"
Issues = "https://github.com/giacomomarchioro/iiifmagestar/issues"

[tool.setuptools.packages.find]
include = ["iiifmagestar*"]

[tool.setuptools.package-data]
iiifmagestar = ["templates/*.html"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
